--- a/public/main.css
+++ b/public/main.css
@@ -438,6 +438,7 @@ form > :last-child {
 .back-link:hover {
   background: var(--black);
   opacity: 0.75;
+  border-top-right-radius:10px;
 }
 
 .single-task-form .form-alert {
